# zupay_task

./: .gitignore  docker-compose.yml  example.env  init-db.js  pyproject.toml
app/: config.py  main.py
app/auth/: __init__.py  utils.py
app/db/: database_manager.py  models.py
app/db/impl/: mongo_manager.py
app/rest/: auth.py  posts.py  schema.py
app/tests/: __init__.py  test_auth.py  test_todo.py
